--- a/css/global.css
+++ b/css/global.css
@@ -1,6 +1,13 @@
-.container {
-    background-color: darkblue;
+div.jumbotron-fluid {
+    height: 470px;
+    background-image: linear-gradient(to bottom, rgba(0,0,0,0.6) 0%,rgba(0,0,0,0.6) 100%), url('/images/introduction-bg.jpg');
+    background-size: cover;
+    /* height: 100%; */
+}
+
+#introduction {
     text-align: center;
+    color: white;
 }
 
 .nav-link {
@@ -9,3 +16,8 @@
 }
 
 
+.page-content {
+    height: 2000px;
+    background-color: antiquewhite;
+    /* background-image: url('images/introduction-bg.jpg'); */
+}
