--- a/css/global.css
+++ b/css/global.css
@@ -1,6 +1,14 @@
+body {
+    position: relative;
+    margin: 0;
+    padding: 0;
+  }
+
+
 div.jumbotron-fluid {
     height: 470px;
-    background-image: linear-gradient(to bottom, rgba(0,0,0,0.8) 0%,rgba(0,0,0,0.8) 100%), url('/images/introduction-bg.jpg');
+    background-image: linear-gradient(to bottom, rgba(0,0,0,0.6) 0%,rgba(0,0,0,0.6) 100%), 
+    url('https://www.mesiniaga.com.my/asset/img/mesiniaga-customcodes-parallax-1.jpg');
     background-size: cover;
     /* height: 100%; */
 }
@@ -15,6 +23,7 @@ a {
     text-decoration: none;
 }
 
+
 #introduction {
     text-align: center;
     color: white;
@@ -26,8 +35,14 @@ a {
 }
 
 
+.active {
+    background-color:rgba(243, 157, 157, 0.342);
+    border-radius: 10%;
+}
+
 .page-content {
-    height: 2000px;
+    text-align: center;
+    height: 800px;
     background-color: rgb(247, 240, 232);
     /* background-image: url('images/introduction-bg.jpg'); */
 }
