--- a/css/style.scss
+++ b/css/style.scss
@@ -3,6 +3,7 @@
 
 // $progressColor: rgba(154, 5, 5, 0.253);
 
+
 body {
     position: relative;
     margin: 0;
@@ -42,12 +43,12 @@ a {
 
 .active {
     background-color: $menuActiveBgColor;
-    border-radius: 10%;
+    border-radius: 12%;
 }
 
 .page-content {
     text-align: center;
-    padding-bottom: 70px;
+    padding-bottom: 50px;
     /* height: 800px; */
     background-color: white;
     /* background-color: rgb(247, 240, 232); */
@@ -76,11 +77,13 @@ a {
     // position: absolute;
     // bottom: 10px;
     // margin: auto 0;
+    // display: table;
+    
 }
 
 
 #portfolio {
-    background-color: black;
+    background-color: rgb(207, 95, 95);
 }
 
 /*** CARD ***/
