--- a/css/style.scss
+++ b/css/style.scss
@@ -48,7 +48,7 @@ a {
 
 .page-content {
     text-align: center;
-    padding-bottom: 50px;
+    padding-bottom: 0px;
     /* height: 800px; */
     background-color: white;
     /* background-color: rgb(247, 240, 232); */
@@ -83,7 +83,7 @@ a {
 
 
 #portfolio {
-    background-color: rgb(207, 95, 95);
+    background-color: rgb(0, 0, 0);
 }
 
 /*** CARD ***/
@@ -95,4 +95,10 @@ a {
     color: rgb(94, 94, 94);
     text-align: justify;
     text-justify: inter-word;
+}
+
+.form-control, #error {
+    // background-color: green;
+    width: 400px;
+    margin: 0 auto;
 }
