--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,12 @@ body {
   padding: 0;
 }
 
+.blank {
+  height: 10vh;
+}
+
 div.jumbotron-fluid {
-  height: 470px;
+  height: 92vh;
   background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0.6) 100%), url("https://www.mesiniaga.com.my/asset/img/mesiniaga-customcodes-parallax-1.jpg");
   background-size: cover;
   /* height: 100%; */
@@ -26,6 +30,10 @@ a {
   color: white;
 }
 
+#navbar {
+  height: 8vh;
+}
+
 .nav-link {
   /* background-color:darkgreen; */
   text-align: center;
@@ -39,7 +47,7 @@ a {
 .page-content {
   text-align: center;
   padding-bottom: 0px;
-  /* height: 800px; */
+  height: 100vh;
   background-color: white;
   /* background-color: rgb(247, 240, 232); */
 }
@@ -81,5 +89,4 @@ a {
   width: 400px;
   margin: 0 auto;
 }
-
 /*# sourceMappingURL=style.css.map */
