--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/*** COMMON ***/
 body {
   position: relative;
   margin: 0;
@@ -6,13 +7,6 @@ body {
 
 .blank {
   height: 10vh;
-}
-
-div.jumbotron-fluid {
-  height: 92vh;
-  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0.6) 100%), url("https://www.mesiniaga.com.my/asset/img/mesiniaga-customcodes-parallax-1.jpg");
-  background-size: cover;
-  /* height: 100%; */
 }
 
 i {
@@ -25,13 +19,29 @@ a {
   text-decoration: none;
 }
 
+.page-content {
+  text-align: center;
+  padding-bottom: 0px;
+  min-height: 100vh;
+  background-color: white;
+  /* background-color: rgb(247, 240, 232); */
+}
+
+/*** INTRODUCTION ***/
+div.jumbotron-fluid {
+  height: 94.5vh;
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0.6) 100%), url("https://www.mesiniaga.com.my/asset/img/mesiniaga-customcodes-parallax-1.jpg");
+  background-size: cover;
+  /* height: 100%; */
+}
+
 #introduction {
   text-align: center;
   color: white;
 }
 
 #navbar {
-  height: 8vh;
+  height: 5.5vh;
 }
 
 .nav-link {
@@ -39,17 +49,17 @@ a {
   text-align: center;
 }
 
-.active {
-  background-color: rgba(134, 134, 134, 0.342);
-  border-radius: 12%;
+a.active {
+  color: black;
+  background-color: rgba(61, 61, 61, 0.342);
 }
 
-.page-content {
-  text-align: center;
-  padding-bottom: 0px;
-  height: 100vh;
-  background-color: white;
-  /* background-color: rgb(247, 240, 232); */
+.link-text {
+  color: white;
+}
+
+a.active > .link-text {
+  color: #dc3545;
 }
 
 /*** ABOUT ME ***/
@@ -70,11 +80,11 @@ a {
   margin-left: 1em;
 }
 
+/*** PORTFOLIO ***/
 #portfolio {
   background-color: black;
 }
 
-/*** CARD ***/
 .card-img-top {
   height: 200px;
 }
@@ -85,6 +95,7 @@ a {
   text-justify: inter-word;
 }
 
+/*** CONTACT ***/
 .form-control, #error {
   width: 400px;
   margin: 0 auto;
