--- a/css/style.scss
+++ b/css/style.scss
@@ -1,8 +1,7 @@
 @import "color";
 @import "size";
 
-// $progressColor: rgba(154, 5, 5, 0.253);
-
+/*** COMMON ***/
 body {
     position: relative;
     margin: 0;
@@ -13,14 +12,6 @@ body {
     height: 10vh;
 }
 
-div.jumbotron-fluid {
-    height: 92vh;
-    background-image: linear-gradient(to bottom, rgba(0,0,0,0.6) 0%,rgba(0,0,0,0.6) 100%), 
-    url('https://www.mesiniaga.com.my/asset/img/mesiniaga-customcodes-parallax-1.jpg');
-    background-size: cover;
-    /* height: 100%; */
-}
-
 i {
     font-size: 25px !important;
     margin: 7px !important;
@@ -29,6 +20,24 @@ i {
 
 a {
     text-decoration: none;
+}
+
+.page-content {
+    text-align: center;
+    padding-bottom: 0px;
+    min-height: 100vh;
+    // height: 100vh;
+    background-color: white;
+    /* background-color: rgb(247, 240, 232); */
+}
+
+/*** INTRODUCTION ***/
+div.jumbotron-fluid {
+    height: 100vh-$navbarHeight;
+    background-image: linear-gradient(to bottom, rgba(0,0,0,0.6) 0%,rgba(0,0,0,0.6) 100%), 
+    url('https://www.mesiniaga.com.my/asset/img/mesiniaga-customcodes-parallax-1.jpg');
+    background-size: cover;
+    /* height: 100%; */
 }
 
 #introduction {
@@ -44,20 +53,27 @@ a {
     /* background-color:darkgreen; */
     text-align: center;
 }
-
-
-.active {
+a.active {
+    color: black;
     background-color: $menuActiveBgColor;
-    border-radius: 12%;
+    // border-radius: 12%;
 }
 
-.page-content {
-    text-align: center;
-    padding-bottom: 0px;
-    height: 100vh;
-    background-color: white;
-    /* background-color: rgb(247, 240, 232); */
+.link-text {
+    color: white;
 }
+
+a.active > .link-text {
+    color: rgb(220, 53, 69);
+}
+
+// .navbar-nav > .active > a {
+//     color: black;
+//     background-color:  $menuActiveBgColor;    
+//   }
+//   .nav-item > a:hover {
+//     color: black;
+//   }
 
 /*** ABOUT ME ***/
 #avt {
@@ -77,21 +93,12 @@ a {
     margin-left: 1em;
 }
 
-.card-footer-custom {
-    // background-color: green !important;
-    // position: absolute;
-    // bottom: 10px;
-    // margin: auto 0;
-    // display: table;
-    
-}
 
-
+/*** PORTFOLIO ***/
 #portfolio {
     background-color: rgb(0, 0, 0);
 }
 
-/*** CARD ***/
 .card-img-top {
     height: $cardImgHeight;
 }
@@ -102,6 +109,16 @@ a {
     text-justify: inter-word;
 }
 
+.card-footer-custom {
+    // background-color: green !important;
+    // position: absolute;
+    // bottom: 10px;
+    // margin: auto 0;
+    // display: table;
+    
+}
+
+/*** CONTACT ***/
 .form-control, #error {
     // background-color: green;
     width: 400px;
