--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,14 @@ a {
   /* background-color: rgb(247, 240, 232); */
 }
 
+.back-to-top {
+  opacity: 0.8;
+  position: fixed;
+  bottom: 25px;
+  right: 25px;
+  display: none;
+}
+
 /*** INTRODUCTION ***/
 div.jumbotron-fluid {
   height: 94.5vh;
