--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,11 @@ div.jumbotron-fluid {
   height: 5.5vh;
 }
 
+a.btn-action {
+  width: 150px;
+  font-size: 20px;
+}
+
 .nav-link {
   /* background-color:darkgreen; */
   text-align: center;
