--- a/css/style.scss
+++ b/css/style.scss
@@ -57,6 +57,12 @@ div.jumbotron-fluid {
     height: $navbarHeight;
 }
 
+a.btn-action {
+    width: 150px;
+    font-size: 20px;
+    // font-weight: bold;
+}
+
 .nav-link {
     /* background-color:darkgreen; */
     text-align: center;
