Update action buttons

--- a/css/style.scss
+++ b/css/style.scss
@@ -58,7 +58,8 @@ div.jumbotron-fluid {
 }
 
 a.btn-action {
-    width: 150px;
+    border-radius: 0;
+    width: 172px;
     font-size: 20px;
     // font-weight: bold;
 }
