--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,10 @@ a {
   text-decoration: none;
 }
 
+a:hover {
+  text-decoration: none;
+}
+
 .page-content {
   text-align: center;
   padding-bottom: 0px;
