--- a/css/style.scss
+++ b/css/style.scss
@@ -22,6 +22,10 @@ a {
     text-decoration: none;
 }
 
+a:hover {
+    text-decoration: none;
+}
+
 .page-content {
     text-align: center;
     padding-bottom: 0px;
