--- a/css/style.scss
+++ b/css/style.scss
@@ -137,6 +137,10 @@ a.active > .link-text {
     
 }
 
+p.tech-stack {
+    min-height: 60px;
+}
+
 /*** CONTACT ***/
 .form-control, #error {
     // background-color: green;
